tests/machine/x/cpp/typed_var.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	auto x;
	(cout << x);
	return 0;
}
